# mindsystem

./: .gitignore  CHANGELOG.md  CLAUDE.md  GSD Command Reference.md  LICENSE  Mindsystem Command Reference.md  Mindsystem-Patterns-Extracted.md  README.md  package.json  youtube_transcript.py
.claude/: settings.json
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
agents/: gsd-codebase-mapper.md  gsd-designer.md  gsd-executor.md  gsd-mock-generator.md  gsd-research-synthesizer.md  gsd-researcher.md  gsd-verifier.md  gsd-verify-fixer.md  ms-adhoc-planner.md  ms-browser-verifier.md  ms-code-reviewer.md  ms-code-simplifier.md  ms-codebase-mapper.md  ms-codebase-researcher.md  ms-compounder.md  ms-consolidator.md  ms-contract-researcher.md  ms-debugger.md  ms-designer.md  ms-executor.md  ms-flutter-code-quality.md  ms-flutter-reviewer.md  ms-flutter-simplifier.md  ms-integration-checker.md  ms-milestone-auditor.md  ms-mock-analyzer.md  ms-mock-generator.md  ms-mockup-designer.md  ms-plan-checker.md  ms-plan-writer.md  ms-product-researcher.md  ms-research-synthesizer.md  ms-researcher.md  ms-roadmapper.md  ms-verifier.md  ms-verify-fixer.md
assets/: bento-grid-prompt.md  (+2 more)
scripts/ms-linear/: pyproject.toml
scripts/ms-linear/ms_linear/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  output.py
scripts/ms-lookup/: README.md  pyproject.toml
scripts/ms-lookup/ms_lookup/: __init__.py  __main__.py  cache.py  cli.py  config.py  errors.py  output.py  tokens.py
scripts/ms-lookup/ms_lookup/backends/: __init__.py  context7.py  perplexity.py
(+318 files in other folders)
